css/main.css
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');

:root {
  --background-color: #18181B;
  --font-color: #F5F5F5;
  --highlight-color: #3B82F6;
  --muted-color: #71717A;
}

html, body {
  margin: 0px;
  padding: 0px;
  font-family: "Open Sans", sans-serif;
  font-optical-sizing: auto;
  font-style: normal;
  font-variation-settings: "wdth" 100;
  font-size: 0.85rem;
}

h1, h2, h3, h4, h5, h6 {
  font-weight: bold;
  margin: 0;
}

h1 {
  font-size: 1.5rem;
  margin: 0.75rem 0;
}

h2 {
  font-size: 1.25rem;
  margin: 0.85rem 0;
}

h3 {
  font-size: 1.0rem;
  margin: 1rem 0;
}

ul {
  list-style: none;
  padding: 0;
}

ul, li {
  margin-bottom: 0.5rem;
}

a {
  color: inherit;
  text-decoration: inherit;
}

.wrapper {
  page-break-after: always;
}

.sidebar-layout .wrapper {
  display: flex;
  width: 100vw;
  height: 100vh;
}

.sidebar {
  background: var(--background-color);
  color: var(--font-color);
  font-size: 1rem;
  white-space: nowrap;
  padding: 1.25rem 0.75rem;
}

.sidebar .logo {
  text-align: center;
  margin-bottom: 2rem;
}

.header {
  background: var(--background-color);
  color: var(--font-color);
  display: flex;
  align-items: center;
  justify-content: space-between;
  font-size: 1rem;
  white-space: nowrap;
  padding: 0.75rem 3rem;
}

.sidebar .logo img {
  width: 8rem;
}

.header .logo img {
  width: 6rem;
}

.logo h1, .name h1 {
  margin-bottom: 0.1rem;
}

.logo h2, .name h2 {
  font-weight: normal;
  margin-top: 0;
}

.contact h1 {
  text-align: center;
}

.contact ul {
  padding: 0 0.1rem 0 0.25rem;
}

.sidebar .contact ul {
  margin-top: 0.75rem;
}

.contact li {
  margin-bottom: 0.75rem;
}

.contact i {
  margin-right: 0.5rem;
}

.container {
  color: var(--background-color);
  flex-grow: 1;
}

.sidebar-layout .container {
  padding: 0.25rem 1rem;
}

.header-layout .container {
  padding: 0.25rem 4.5rem;
}

.highlight {
  color: var(--highlight-color);
}

.muted {
  color: var(--muted-color);
}

.skills, .exp-section {
  margin-bottom: 1.25rem;
}

.exp-section h3, .exp-section h4 {
  margin-bottom: 0.1rem;
}

.exp-section ul {
  list-style: inherit;
  padding-left: 1rem;
}

.exp-headline {
  display: flex;
  justify-content: space-between;
  margin-bottom: 0.2rem;
}

.exp-headline h3, .exp-headline h4 {
  margin-top: 0;
  margin-bottom: 0px;
}

.exp-header {
  margin-bottom: 0.5rem;
}

.exp-line {
  display: flex;
  justify-content: space-between;
  font-size: 0.8rem;
  font-weight: bold;
}

